Ordinary Hospital Bed addition Skyfaller now more universal Incident chance now decrease, if building already on a map Github go Public

--- a/Languages/Russian/DefInjected/EntityCodexEntryDef/EntityCodexEntryDefs.xml
+++ b/Languages/Russian/DefInjected/EntityCodexEntryDef/EntityCodexEntryDefs.xml
@@ -2,5 +2,7 @@
 <LanguageData>
 
 	<AE_EntityCodexEntry_AnomalyBed.label>обычная кровать</AE_EntityCodexEntry_AnomalyBed.label>
+	
+	<AE_EntityCodexEntry_AnomalyHospitalBed.label>обычная медицинская кровать</AE_EntityCodexEntry_AnomalyHospitalBed.label>
 
 </LanguageData>
