--- a/Languages/Russian/DefInjected/HediffDef/Hediffs_AE_Serum.xml
+++ b/Languages/Russian/DefInjected/HediffDef/Hediffs_AE_Serum.xml
@@ -4,4 +4,7 @@
 	<Hediff_AESleepEnhancerSerum.label>сыворотка для улучшения сна</Hediff_AESleepEnhancerSerum.label>
 	<Hediff_AESleepEnhancerSerum.description>Этот человек принял препарат, который повысил эффективность его отдыха.</Hediff_AESleepEnhancerSerum.description>
   
+	<Hediff_AERegenSerum.label>сыворотка регенерации</Hediff_AERegenSerum.label>
+	<Hediff_AERegenSerum.description>Этот человек принял препарат, который усилил его лечебный фактор.</Hediff_AERegenSerum.description>
+  
 </LanguageData>
