--- a/Languages/English/Keyed/MeatGrinder.xml
+++ b/Languages/English/Keyed/MeatGrinder.xml
@@ -3,4 +3,6 @@
 	<AnomaliesExpected.MeatGrinder.Consumed>{1} of {0} was consumed by {2}</AnomaliesExpected.MeatGrinder.Consumed>
 	<AnomaliesExpected.MeatGrinder.ConsumedFully>{0} was fully consumed by {1}</AnomaliesExpected.MeatGrinder.ConsumedFully>
 	<AnomaliesExpected.MeatGrinder.Noise>Noise: {0} dB</AnomaliesExpected.MeatGrinder.Noise>
+	<AnomaliesExpected.MeatGrinder.BodyParts>Body parts in danger: {0}</AnomaliesExpected.MeatGrinder.BodyParts>
+	<AnomaliesExpected.MeatGrinder.Danger>Body in danger of consumption</AnomaliesExpected.MeatGrinder.Danger>
 </LanguageData>
