--- a/Languages/Russian/DefInjected/ResearchProjectDef/ResearchProjects.xml
+++ b/Languages/Russian/DefInjected/ResearchProjectDef/ResearchProjects.xml
@@ -41,5 +41,14 @@
 	<AEGrinderJaw.generalRules.rulesStrings.2>был спасателем в длительных миссиях... пока случайно не съел экипаж космического корабля</AEGrinderJaw.generalRules.rulesStrings.2>
 	<AEGrinderJaw.generalRules.rulesStrings.3>может прожевать целый стейк за секунды</AEGrinderJaw.generalRules.rulesStrings.3>
 	<AEGrinderJaw.generalRules.rulesStrings.4>создание челюсти-измельчителя</AEGrinderJaw.generalRules.rulesStrings.4>
+	
+	
+	
+	<AEBingingFoodSerum.label>сыворотка обжорства</AEBingingFoodSerum.label>
+	<AEBingingFoodSerum.description>Синтезировать сыворотку, которая заставит человека объедаться едой.</AEBingingFoodSerum.description>
+	<AEBingingFoodSerum.generalRules.rulesStrings.0>сыворотка обжорства</AEBingingFoodSerum.generalRules.rulesStrings.0>
+	<AEBingingFoodSerum.generalRules.rulesStrings.1>съелвсю еду в комплексе</AEBingingFoodSerum.generalRules.rulesStrings.1>
+	<AEBingingFoodSerum.generalRules.rulesStrings.2>урчание живота было слышно на несколько километров вокруг</AEBingingFoodSerum.generalRules.rulesStrings.2>
+	<AEBingingFoodSerum.generalRules.rulesStrings.3>синтезируется сыворотка обжорства</AEBingingFoodSerum.generalRules.rulesStrings.3>
 
 </LanguageData>
