--- a/Languages/Russian/DefInjected/ThingDefs/Ethereal_Various.xml
+++ b/Languages/Russian/DefInjected/ThingDefs/Ethereal_Various.xml
@@ -4,5 +4,7 @@
 	<AE_AnomalyIncoming.label>аномалия (приближается)</AE_AnomalyIncoming.label>
 	
 	<AE_ActiveDropPodAnomaly.label>аномальная транспортная капсула (активирована)</AE_ActiveDropPodAnomaly.label>
+	
+	<MinifiedThingAE.label>предмет</MinifiedThingAE.label>
 
 </LanguageData>
