--- a/Languages/Russian/Keyed/BeamTarget.xml
+++ b/Languages/Russian/Keyed/BeamTarget.xml
@@ -7,4 +7,7 @@
 	<AnomaliesExpected.BeamTarget.TimeTillBeam>Время до энергетического луча: {0}</AnomaliesExpected.BeamTarget.TimeTillBeam>
 	<AnomaliesExpected.BeamTarget.ButtonHold>Удерживает кнопку</AnomaliesExpected.BeamTarget.ButtonHold>
 	<AnomaliesExpected.BeamTarget.LeftContainment>{0} покинул зону содержания</AnomaliesExpected.BeamTarget.LeftContainment>
+	<AnomaliesExpected.BeamTarget.DestroyedAfterStudy>Создание данных спутника</AnomaliesExpected.BeamTarget.DestroyedAfterStudy>
+	
+	<AnomaliesExpected.PowerBeam.BeamTargetMissing>{0} не смог подключиться к Передатчику</AnomaliesExpected.PowerBeam.BeamTargetMissing>
 </LanguageData>
