--- a/Languages/Russian/Keyed/Mod.xml
+++ b/Languages/Russian/Keyed/Mod.xml
@@ -4,6 +4,8 @@
 	
 	<AnomaliesExpected.Settings.BakingPies.ReplicationLimit>Ограничение максимального количество создаваемых кусков пирога за раз до {0} (0 = без ограничений)</AnomaliesExpected.Settings.BakingPies.ReplicationLimit>
 	<AnomaliesExpected.Settings.BakingPies.DespawnPiecesOnDestroy>Все куски пирога исчезнут, когда большой пирог будет съеден</AnomaliesExpected.Settings.BakingPies.DespawnPiecesOnDestroy>
+	<AnomaliesExpected.Settings.BakingPies.SpawnPiePieceNotification>Уведомление при создании новых кусков</AnomaliesExpected.Settings.BakingPies.SpawnPiePieceNotification>
 	
 	<AnomaliesExpected.Settings.PoweBeamRequireBeamTarget>Целеуказатель для Точечного Луча требует существование Передатчика для активации Луча</AnomaliesExpected.Settings.PoweBeamRequireBeamTarget>
+	<AnomaliesExpected.Settings.BeamTarget.BeamTargetLetter>Письмо вместо уведомления, когда Передатчик покидает зону содержания</AnomaliesExpected.Settings.BeamTarget.BeamTargetLetter>
 </LanguageData>
