--- a/Languages/Russian/Keyed/AnomalyHospitalBed.xml
+++ b/Languages/Russian/Keyed/AnomalyHospitalBed.xml
@@ -4,4 +4,6 @@
 	<AnomaliesExpected.AnomalyHospitalBed.Sign.Desc>Поставить подпись на медицинском планшете где указана информация о пациенте</AnomaliesExpected.AnomalyHospitalBed.Sign.Desc>
 	<AnomaliesExpected.AnomalyHospitalBed.Sign.Empty>Нет пациента на кровати</AnomaliesExpected.AnomalyHospitalBed.Sign.Empty>
 	<AnomaliesExpected.AnomalyHospitalBed.Sign.Reloading>Можно подписать через {0}</AnomaliesExpected.AnomalyHospitalBed.Sign.Reloading>
+	<AnomaliesExpected.AnomalyHospitalBed.isDonor.Label>Донор</AnomaliesExpected.AnomalyHospitalBed.isDonor.Label>
+	<AnomaliesExpected.AnomalyHospitalBed.isDonor.Desc>Поставить галочку напротив "является донором"</AnomaliesExpected.AnomalyHospitalBed.isDonor.Desc>
 </LanguageData>
